git-repair (1.20140424) UNRELEASED; urgency=medium

  * Merge from git-annex.

 -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2014 16:35:16 -0400

git-repair (1.20140423) unstable; urgency=medium

  * Improve memory usage when git fsck finds a great many broken objects.
  * Merge from git-annex.

 -- Joey Hess <joeyh@debian.org>  Wed, 23 Apr 2014 14:01:30 -0400

git-repair (1.20140227) unstable; urgency=medium

  * Optimise unpacking of pack files, and avoid repeated error
    messages about corrupt pack files.
  * Add swapping 2 files test case.

 -- Joey Hess <joeyh@debian.org>  Thu, 27 Feb 2014 11:56:27 -0400

git-repair (1.20140115) unstable; urgency=medium

  * Support old git versions from before git fsck --no-dangling was
    implemented.
  * Fix bug in packed refs file exploding code that caused a .gitrefs
    directory to be created instead of .git/refs
  * Check git version at run time.

 -- Joey Hess <joeyh@debian.org>  Wed, 15 Jan 2014 16:53:30 -0400

git-repair (1.20131213) unstable; urgency=low

  * Improve repair of index files in some situations.

 -- Joey Hess <joeyh@debian.org>  Fri, 13 Dec 2013 14:51:51 -0400

git-repair (1.20131203) unstable; urgency=low

  * Fix build deps. Closes: #731179

 -- Joey Hess <joeyh@debian.org>  Tue, 03 Dec 2013 15:02:21 -0400

git-repair (1.20131122) unstable; urgency=low

  * Added test mode, which can be used to randomly corrupt test 
    repositories, in reproducible ways, which allows easy
    corruption-driven-development.
  * Improve repair code in the case where the index file is corrupt,
    and this hides other problems.
  * Write a dummy .git/HEAD if the file is missing or corrupt, as
    git otherwise will not treat the repository as a git repo.
  * Improve fsck code to find badly corrupted objects that crash git fsck
    before it can complain about them.
  * Fixed crashes on bad file encodings.
  * Can now run 10000 tests (git-repair --test -n 10000 --force)
    with 0 failures.
